# eudi-intel

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  docker-compose.yml
.claude/skills/dashboard-views/: SKILL.md
.claude/skills/entity-summarization/: SKILL.md
.claude/skills/eudi-source-registry/: SKILL.md
.claude/skills/grounded-authoring/: SKILL.md
.claude/skills/hybrid-search/: SKILL.md
.claude/skills/ingestion-pipeline/: SKILL.md
.claude/skills/local-inference/: SKILL.md
.claude/skills/run-and-test/: SKILL.md
.claude/skills/semantic-recall/: SKILL.md
api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
api/app/: main.py
api/app/collectors/: base.py  git.py  github_api.py  http.py  registry.py  runner.py
api/app/core/: config.py
api/app/db/: base.py  qdrant.py  session.py
api/app/db/migrations/: env.py
api/app/db/migrations/versions/: 0001_baseline.py  0002_source_snapshots.py  0003_entities_phase_2_entities.py  0004_section_embedded_hash.py  0005_search_indexes.py  0006_generated_drafts.py  0007_entity_summaries.py
api/app/embeddings/: bge_m3.py  reranker.py
api/app/mcp/: __init__.py  errors.py  resources.py  server.py  tools.py
api/app/models/: __init__.py  entities.py  source.py
api/app/parsers/: feature_map.py  feeds.py  github_lists.py  html.py  markdown.py  tiering.py
api/app/routers/: answer.py  author.py  dashboard.py  health.py  ingest.py  search.py  support.py
api/app/services/: authoring.py  deep_ingest.py  entity_upserts.py  generation.py  glossary.py  health_checks.py  llm.py  parse_pipeline.py  query_expansion.py  rerank_cache.py  retrieval.py  snapshots.py  suggest.py  summarize.py  support.py  vector_index.py  version_diff.py
api/app/worker/: celery_app.py  tasks.py
api/tests/: README.md  test_authoring.py  test_collectors.py  test_dashboard.py  test_deep_ingest.py  test_feature_map_parser.py  test_feed_parser.py  test_generation.py  test_github_list_parsers.py  test_glossary.py  test_grounding_eval.py  test_health.py  test_ingest_api.py  test_markdown_chunker.py  test_mcp_tools.py  test_recall_eval.py  test_registry.py  test_rerank_cache.py  test_retrieval.py  test_scheduling.py  test_search_integration.py  test_snapshot_dedupe.py  test_summarize.py  test_support.py  test_tiering.py  test_vector_index.py  test_version_diff.py
api/tests/eval/: grounding.jsonl  recall.jsonl
docs/: ARCHITECTURE.md  BUILD_PLAN.md  SUPPORT_PLAN.md  mcp.md
training/: README.md
web/: Dockerfile  package-lock.json  package.json  playwright.config.ts
web/app/: HealthStatus.tsx  Nav.tsx  Summary.tsx  globals.css  layout.tsx  page.tsx
web/e2e/: dashboard.spec.ts  drafts.spec.ts  search.spec.ts  support.spec.ts
web/lib/: api.ts
(+10 files in other folders)
