[project]
name = "eudi-intel-api"
version = "0.0.0"
description = "EUDI Intelligence & Authoring Workbench — API (ingestion, retrieval, generation, citations)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "qdrant-client>=1.9",
  "redis>=5.0",
  "httpx>=0.27",
  "celery>=5.3",
  "trafilatura>=1.12",
]

[project.optional-dependencies]
# Heavy CPU-inference deps (torch via FlagEmbedding). Installed in the Docker
# image; host dev venvs skip them — unit tests patch the embedder.
embed = [
  "FlagEmbedding>=1.3",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "black>=24.0",
  "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

# Celery, Trafilatura and FlagEmbedding ship no py.typed marker / stubs.
[[tool.mypy.overrides]]
module = ["celery.*", "trafilatura.*", "FlagEmbedding.*"]
ignore_missing_imports = true

# Celery's @task decorator is untyped; the task body stays fully typed.
[[tool.mypy.overrides]]
module = ["app.worker.tasks"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
